--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,3 +1,4 @@
+
 body, html {
   height: 100%;
   margin: 0;
@@ -177,20 +178,92 @@ hr {
   font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
 }
 
-.button {
-  background-color: transparent;
-  color: white;
-  border: 1px solid white;
-  font-size: 20px;
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-  padding : 10px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  margin-left: 9.5em;
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
+
+.wrap {
+  display: flex;
+  margin-left: 12.5em;
 }
-.button:hover {
-  background-color: white;
-  color: black;
+.wrap div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px;
+}
+
+.parent {
+  position: relative;
+}
+.parent .sub {
+  transition: all 0.5s ease-in-out;
+}
+.parent .thanks {
+  font-size: 13px;
+  transition: all 0.5s ease-in-out;
+  position: absolute;
+  top: -5px;
+  left: 0;
+  opacity: 0;
+}
+
+.text {
+  font-size: 17px;
+  color: #F5F5F5;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  transition: all 0.5s ease-in-out;
+}
+
+#toggle {
+  display: none;
+}
+
+.button {
+  position: absolute;
+  z-index: 999;
+  width: 28px;
+  height: 28px;
+  background: #F9F9F9;
+  border-radius: 10%;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+.button:before {
+  position: absolute;
+  top: 13px;
+  left: 6px;
+  content: '';
+  width: 16px;
+  height: 2px;
+  background: #081725;
+  transform: rotate(90deg);
+  
+}
+.button:after {
+  position: absolute;
+  top: 13px;
+  left: 6px;
+  content: '';
+  width: 16px;
+  height: 2px;
+  background: #081725;
+}
+
+#toggle:checked ~ .nav {
+  opacity: 1;
+  transform: translateY(10%);
+}
+
+#toggle:checked ~ .button {
+  transform: rotate(135deg);
+  box-shadow: 0 0 0 0 transparent;
+  border-radius: 100%;
+}
+
+#toggle:checked ~ .subbed {
+  opacity: 1;
 }
 
 .footer {
