--- a/styles/penang.css
+++ b/styles/penang.css
@@ -156,6 +156,15 @@ hr {
   color: white;
 }
 
+.name {
+  text-align: center;
+  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+  font-size: 18px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .comment {
   height: 50px;
   width: 300px;
@@ -202,4 +211,47 @@ hr {
 
 .footer a {
   color: white;
+}
+
+.commentBox {
+  padding: 1%;
+  width: 75%;
+  border: 1px solid #fff;
+  background-color: #081725;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.user {
+  color: white;
+  margin-left: 12em;
+  margin-right: 12em;
+}
+
+.commenting {
+  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+  font-size: 18px;
+  text-align: justify;
+}
+
+.leftPanelImg {
+  width: 10%;
+  float: left;
+}
+
+.leftPanelImg img {
+  border-radius: 100%;
+  width: 50%;
+  margin-left: 17em;
+  margin-right: 17em;
+}
+
+.rightPanel {
+  width: 85%;
+  float: left;
+  margin-left: 1%;
+}
+
+.clear {
+  clear:both;
 }
