--- a/styles/package.css
+++ b/styles/package.css
@@ -201,6 +201,30 @@ hr {
   background-color: white;
   padding: 10px;
 }
+#more1 {
+  display: none;
+}
+#more2 {
+  display: none;
+}
+#more3 {
+  display: none;
+}
+#more4 {
+  display: none;
+}
+#more5 {
+  display: none;
+}
+#more6 {
+  display: none;
+}
+
+button{
+  background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
+}
 
 /* Responsive layout - makes one column instead on three */
 @media screen and (max-width: 800px) {
